# easypool

./: .gitignore  .pre-commit-config.yaml  README.md  backend.md  dashboard-ai-prompt.md  dashboard_ux_analysis.md  docker-compose.yml  log.txt  pytest.ini  refactor_page.py  run_services.json  simulate_gps_test.py  startup-script.sh
api/: openapi.yaml
services/backend/: .dockerignore  Dockerfile  create_admin.py  pyproject.toml  pytest_output.txt  requirements.txt  schema.yml  seed_gps.py  seed_gps_history.py  seed_gps_live.py  seed_isolation.py  seed_users.py
services/backend/apps/attendance/: admin.py  models.py  serializers.py  views.py
services/backend/apps/attendance/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
services/backend/apps/buses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
services/backend/apps/buses/migrations/: 0001_initial.py  0002_initial.py  0003_remove_bus_camera_count_camera.py  0004_bus_gps_imei.py  0005_camera_stream_url.py  0006_alter_bus_status.py  0007_alter_bus_options_bus_fuel_type_bus_has_ac_and_more.py  0008_bus_allocated_to_route_allocated_to_and_more.py  0009_remove_bus_school_remove_route_school_and_more.py  0010_remove_bus_allocated_to_remove_route_allocated_to_and_more.py  0011_busallocation_is_active.py  0012_busallocationlog_remove_busallocation_is_active.py
services/backend/apps/gps/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
services/backend/apps/gps/migrations/: 0001_initial.py  0002_initial.py  0003_gpspoint_ignition.py  0004_gpspoint_heading.py  0005_alter_gpspoint_heading_alter_gpspoint_ignition.py  0006_alter_gpspoint_timestamp_and_more.py  0007_gpspoint_location.py  0008_sync_gps_points.py  0009_finalized_spatial_gps.py  0009_fix_null_locations.py  0010_finalized_spatial_gps.py  0011_bushourlydistance.py
services/backend/apps/schools/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
services/backend/apps/schools/migrations/: 0001_initial.py  (+7 more)
services/backend/apps/students/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
services/backend/config/: asgi.py  settings.py  urls.py
services/backend/core/: permissions.py
services/backend/pgbouncer/: Dockerfile  entrypoint.sh  pgbouncer.ini  userlist.txt
(+77 files in other folders)
